RESOLVED FIXED282889
REGRESSION (284079@main): [ MacOS Wk1 ] 5X imported/w3c/web-platform-tests & 4X http/tests/xmlhttprequest tests are constant crashes
https://bugs.webkit.org/show_bug.cgi?id=282889
Summary REGRESSION (284079@main): [ MacOS Wk1 ] 5X imported/w3c/web-platform-tests & ...
Jay Stfleur
Reported 2024-11-09 20:55:25 PST
Description: http/tests/xmlhttprequest/access-control-and-redirects-async.html http/tests/xmlhttprequest/access-control-preflight-not-successful.html http/tests/xmlhttprequest/on-network-timeout-error-during-preflight.html http/tests/xmlhttprequest/simple-cross-origin-denied-events-post.html imported/w3c/web-platform-tests/cors/preflight-failure.htm imported/w3c/web-platform-tests/xhr/access-control-and-redirects-async.any.html imported/w3c/web-platform-tests/xhr/access-control-and-redirects-async.any.worker.html imported/w3c/web-platform-tests/xhr/event-error-order.sub.html imported/w3c/web-platform-tests/xhr/send-authentication-basic-cors.htm imported/w3c/web-platform-tests/xhr/send-network-error-async-events.sub.htm All 10 tests are consistently crashing in Sonoma+ WK1 debug, no crash logs were reported for these tests. Buildbot URL: https://build.webkit.org/#/builders/1235/builds/682 History: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=http%2Ftests%2Fxmlhttprequest%2Faccess-control-and-redirects-async.html&test=http%2Ftests%2Fxmlhttprequest%2Faccess-control-preflight-not-successful.html&test=http%2Ftests%2Fxmlhttprequest%2Fon-network-timeout-error-during-preflight.html&test=http%2Ftests%2Fxmlhttprequest%2Fsimple-cross-origin-denied-events-post.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcors%2Fpreflight-failure.htm&test=imported%2Fw3c%2Fweb-platform-tests%2Fxhr%2Faccess-control-and-redirects-async.any.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fxhr%2Faccess-control-and-redirects-async.any.worker.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fxhr%2Fevent-error-order.sub.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fxhr%2Fsend-authentication-basic-cors.htm&test=imported%2Fw3c%2Fweb-platform-tests%2Fxhr%2Fsend-network-error-async-events.sub.htm&version_name=Sequoia&version_name=Sonoma&flavor=wk1 Example of standard error output: CONSOLE MESSAGE: Cross-origin redirection to http://127.0.0.1:8800/xhr/resources/access-control-basic-allow-star.py denied by Cross-Origin Resource Sharing policy: Origin http://localhost:8800 is not allowed by Access-Control-Allow-Origin. Status code: 302 CONSOLE MESSAGE: XMLHttpRequest cannot load http://127.0.0.1:8800/xhr/resources/redirect-cors.py?location=http://127.0.0.1:8800/xhr/resources/access-control-basic-allow-star.py& due to access control checks. CONSOLE MESSAGE: Cross-origin redirection to foo://bar.cgi denied by Cross-Origin Resource Sharing policy: not allowed to follow a cross-origin CORS redirection with non CORS scheme CONSOLE MESSAGE: XMLHttpRequest cannot load http://127.0.0.1:8800/xhr/resources/redirect-cors.py?location=foo://bar.cgi&allow_origin=true due to access control checks.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-09 20:56:44 PST
Jay Stfleur
Comment 2 2024-11-09 21:01:01 PST
These tests appeared to have regressed on 284079@main, will skip them for now.
EWS
Comment 3 2024-11-09 21:31:46 PST
Test gardening commit 286397@main (14a4e5f8afa8): <https://commits.webkit.org/286397@main> Reviewed commits have been landed. Closing PR #36454 and removing active labels.
EWS
Comment 4 2024-11-21 03:29:36 PST
Committed 286901@main (71c1b82e4464): <https://commits.webkit.org/286901@main> Reviewed commits have been landed. Closing PR #36885 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.