REGRESSION (284079@main): [ MacOS Wk1 ] 5X imported/w3c/web-platform-tests & 4X http/tests/xmlhttprequest tests are constant crashes rdar://139585982 https://bugs.webkit.org/show_bug.cgi?id=282889

Reviewed by Chris Dumez.

Rename CachedRawResource::identifier() to CachedRawResource::resourceLoaderIdentifier().
This clarifies why this identifier may not always be there in case of failure.

Add a check in DocumentThreadableLoader::preflightFailure for the identifier since we now pass an optional.

* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/loader/CrossOriginPreflightChecker.cpp:
(WebCore::CrossOriginPreflightChecker::validatePreflightResponse):
(WebCore::CrossOriginPreflightChecker::notifyFinished):
(WebCore::CrossOriginPreflightChecker::redirectReceived):
* Source/WebCore/loader/CrossOriginPreflightChecker.h:
* Source/WebCore/loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::responseReceived):
(WebCore::DocumentLoader::disallowDataRequest const):
* Source/WebCore/loader/DocumentThreadableLoader.cpp:
(WebCore::DocumentThreadableLoader::responseReceived):
(WebCore::DocumentThreadableLoader::dataReceived):
(WebCore::DocumentThreadableLoader::notifyFinished):
(WebCore::DocumentThreadableLoader::preflightFailure):
* Source/WebCore/loader/DocumentThreadableLoader.h:
* Source/WebCore/loader/cache/CachedRawResource.cpp:
(WebCore::CachedRawResource::responseReceived):
(WebCore::CachedRawResource::switchClientsToRevalidatedResource):
* Source/WebCore/loader/cache/CachedRawResource.h:

Canonical link: https://commits.webkit.org/286901@main